--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
-  <title>Document</title>
+  <title>Financial Assistant</title>
 </head>
 
 <body>
